--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'org.logical.models:logical-models:0.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.2.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.2.6.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
 }
 
 
