--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,16 @@ repositories {
 
 group = 'com.automax.security'
 version = '0.0.1'
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 
 dependencies {
-    compile 'org.logical.models:logical-models:0.0.1'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'org.logical.models:logical-models:0.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.2.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.2.6.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
 }
 
 
